--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,7 +1,7 @@
-<header class="header">
+<header data-scroll="105" class="header">
 	<div class="header__top top-header">
 		<div class="top-header__container">
-			<div class="top-header__logo-ibg">
+			<div class="top-header__logo">
 				<img src="@img/logo/logo.png" alt="" class="top-header__logo-img">
 			</div>
 			<div class="top-header__info">
@@ -20,6 +20,25 @@
 			</form>
 		</div>
 	</div>
-	<div class="header__bottom bootom-header">
+	<div data-watch class="header__bottom bootom-header">
+		<div class="bootom-header__container">
+			<div class="bootom-header__menu menu">
+				<button type="button" class="bootom-header__buscet _icon-buscet"><span>0</span></button>
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li class="menu__item"><a href="" class="menu__link">Каталог</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Услуги</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Акции</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Компания</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Статьи</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Фотогалерея</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+					</ul>
+				</nav>
+				<button type="button" class="menu__icon icon-menu">
+					<div>Меню</div> <span></span>
+				</button>
+			</div>
+		</div>
 	</div>
 </header>
